html/css components

--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -13,8 +13,91 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- CardsList component -->
+  <div class="row">
+    <div class="col-3"></div>
+
+    <div class="wrapper col-2">
+      <img src="../Laptop.png" alt="laptop" class="card-product">
+      <div class="stars">
+        <p>2.89 <img src="../Star.png"></p>
+      </div>
+      <div class="product-prise">
+        15999
+      </div>
+      <h5 class="product-name">
+        Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+      </h5>
+      <p class="category">laptops</p>
+      <button class="btn">ADD TO CART</button>
+    </div>
+
+    <div class="col-1"></div>
+  
+    <div class="wrapper col-2">
+      <img src="../Laptop.png" alt="laptop" class="card-product">
+      <div class="stars">
+        <p>1.96 <img src="../Star.png"></p>
+      </div>
+      <div class="product-prise">
+        21500
+      </div>
+      <h5 class="product-name">
+        Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black
+      </h5>
+      <p class="category">laptops</p>
+      <button class="btn">ADD TO CART</button>
+    </div>
+
+    <div class="col-1"></div>
+  
+    <div class="wrapper col-2">
+      <img src="../Laptop.png" alt="laptop" class="card-product">
+      <div class="stars">
+        <p>2.42 <img src="../Star.png"></p>
+      </div>
+      <div class="product-prise">
+        22999
+      </div>
+      <h5 class="product-name">
+        Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black
+      </h5>
+      <p class="category">laptops</p>
+      <button class="btn">ADD TO CART</button>
+    </div>
+
+    <div class="col-3"></div>
+  
+    <div class="wrapper col-2">
+      <img src="../Laptop.png" alt="laptop" class="card-product">
+      <div class="stars">
+        <p>0.53 <img src="../Star.png"></p>
+      </div>
+      <div class="product-prise">
+        28999
+      </div>
+      <h5 class="product-name">
+        Ноутбук Acer Nitro 5 AN515-55-56WH (NH.Q7PEU.00L) Obsidian Black Суперцена!!!
+      </h5>
+      <p class="category">laptops</p>
+      <button class="btn">ADD TO CART</button>
+    </div>
+
+    <div class="col-1"></div>
+  
+    <div class="wrapper col-2">
+      <img src="../Laptop.png" alt="laptop" class="card-product">
+      <div class="stars">
+        <p>3.2<img src="../Star.png"></p>
+      </div>
+      <div class="product-prise">
+        22500
+      </div>
+      <h5 class="product-name">
+        Ноутбук Acer Aspire 7 A715-75G-57LR (NH.Q87EU.006) Charcoal Black
+      </h5>
+      <p class="category">laptops</p>
+      <button class="btn">ADD TO CART</button>
+    </div>
   </div>
 </main>
 </body>
