--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -15,7 +15,20 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- DoubleSlider component -->
+      <div class="wrapper-range">
+        <div class="filter-range">
+          <div class="filter-range-scale">
+            <div class="filter-range-bar"></div>
+          </div>
+          <span class="filter-range-handle min"></span>
+          <span class="filter-range-handle max" style="left: 99%;"></span>
+        </div>
+      </div>
+    
+      <div class="filter-interval">
+        <span class="from">100</span>
+        <span class="to">200</span>
+      </div>
   </div>
 </main>
 </body>
