--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -15,7 +15,20 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="pagination">
+      <a href="#" class="arrow left-arrow"><</i>
+      <a href="#" class="page page-1 active">1</a>
+      <a href="#" class="page page-2">2</a>
+      <a href="#" class="page page-3">3</a>
+      <a href="#" class="page page-4">4</a>
+      <a href="#" class="page page-5">5</a>
+      <a href="#" class="page page-6">6</a>
+      <a href="#" class="page page-7">7</a>
+      <a href="#" class="page page-8">8</a>
+      <a href="#" class="page page-9">9</a>
+      <a href="#" class="page page-10">10</a>
+      <a href="#" class="arrow right-arrow">></a>
+    </div>
   </div>
 </main>
 </body>
