--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -16,7 +16,7 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+    <input class="search col-10" type="text" placeholder="Search">
   </div>
 </main>
 </body>
