--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -14,8 +14,19 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- FiltersList component -->
+  <div class="wrapper row">
+    <h2 class="category_header col-12">Category</h2>
+    <div class="row">
+      <div class="checkboxes col-12">
+        <input type="checkbox" class="checkbox" id="checkbox_1">
+        <label class="label" for="checkbox_1">Cell phones</label>
+      </div>
+
+      <div class="checkboxes col-12">
+        <input type="checkbox" class="checkbox" id="checkbox_2">
+        <label class="label" for="checkbox_2">Computers & Tables</label>
+      </div>
+    </div>
   </div>
 </main>
 </body>
