--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,32 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.wrapper {
+    position: relative;
+}
+
+.search {
+    background: url('../searchIcon.png') no-repeat right;
+    background-size: auto 47%;
+    background-origin: content-box;
+    position: absolute;
+    width: 100%;
+    height: 45px;
+    box-shadow: 0px 2px 8px rgba(62, 62, 62, 0.15);
+    border-radius: 7px;
+    border: 1px solid grey;
+    font-size: 18px;
+    padding-left: 25px;
+    padding-right: 25px;
+    box-sizing: border-box;  
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.col-10{
+    width: (100% / 12 * 10);
+}
