--- a/src/components/side-bar/01-css-task/style.css
+++ b/src/components/side-bar/01-css-task/style.css
@@ -1,1 +1,165 @@
-/* put your styles in this file */
+.wrapper{
+
+}
+
+.box {
+    position: relative;
+    width: 290px;
+    height: 600px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+    border-radius: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-sizing:border-box;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    color: #2C2C2C;
+}
+
+h2 {
+    margin-left: 20px;
+}
+
+hr {
+    width: 250px;
+    text-align: center;
+    background-color: rgb(168, 164, 164);
+}
+
+.wrapper-range {
+    margin-bottom: 10px;
+    padding: 10px 18px 5px 18px;
+    border-radius: 3px;
+}
+
+.filter-range {
+    position: relative;
+}
+
+.filter-range-scale {
+    height: 7px;
+    background-color: grey;
+}
+
+.filter-range-bar {
+    height: 7px;
+    width: 100%;
+    background-color: #7E72F2;
+}
+
+.filter-range-handle {
+    background-size: cover;
+    cursor: grab;
+    height: 18px;
+    margin-top: -9px;
+    position: absolute;
+    top: 50%;
+    width: 6px;
+}
+
+.min {
+    background: url(../thumbLeft.png) 0 no-repeat;
+    background-color: #fff;
+}
+
+.max {
+    background: url(../thumbRight.png) 0 no-repeat;
+    background-color: #fff;
+}
+
+.filter-interval {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.to {
+    text-align: right;
+    padding-right: 15px;
+}
+
+.from {
+    padding-left: 15px;
+}
+
+.checkboxes {
+    padding-left: 20px;
+    padding-bottom: 5px;
+    font-size: 16px;
+    position: relative;
+}
+
+.checkbox {
+    -webkit-appearance: none;
+    appearance: none;
+    position: absolute;
+}
+
+.label {
+    font-size: 1rem;
+    padding-left: 25px;
+    cursor: pointer;
+}
+
+.label::before{
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+
+    border: 1px solid rgb(104, 103, 103);
+    background-color: #fff;
+    border-radius: 3px;
+
+    position: absolute;
+    top: 0px;
+    left: 20px;
+    z-index: 1;
+
+    transition: background .1s linear, border .1s linear;
+}
+
+.label::after{
+    content: "✓";
+    color: #fff;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-size: 13px 13px;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    left: 23px;
+    z-index: 2;
+    transition: opacity .1s linear;
+}
+
+.checkbox:checked + .label::before{
+    background-color: #7E72F2;
+    border-color: #7E72F2;
+}
+
+.checkbox:checked + .label::after{
+    opacity: 1;
+}
+
+.btn {
+    margin-top: 30px;
+}
+
+.btn_clear {
+    position: absolute;
+    width: 290px;
+    height: 46px;
+    box-sizing:border-box;
+
+    background: #7E72F2;
+    color: #fff;
+    font-size: 18px;
+    border: 1px solid #7E72F2;
+    border-radius: 7px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
