--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -17,6 +17,16 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="search-box">
+      <form>
+        <div class="input-form">
+
+          <input type="text" class="input-search" placeholder="Search">
+          <label class="bi bi-search icon-search"></label>
+
+        </div>
+      </form>
+    </div>
   </div>
 </main>
 </body>
