--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,40 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+
+body {
+  background-color: #f9f9f9;
+  font-family: Montserrat,sans-serif;
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.search-box {
+  position: relative;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  border-radius: 4px;
+  width: 100%;
+  padding: 12px 20px;
+  padding-right: 70px;
+}
+
+.input-search {
+  border: none;
+  outline: none;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+.icon-search {
+  color: #606060;
+  font-size: 1.375rem;
+  height: 100%;
+  position: absolute;
+  right: 40px;
+  top: 0;
+  display: flex;
+  align-items: center;
+}
