completed tasks: cards-list and cart

--- a/components/card-list/index.html
+++ b/components/card-list/index.html
@@ -4,9 +4,123 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
+  <title>card-list</title>
 </head>
 <body>
+  <main>
+
+      <div class="container">
+        <div class="product-content grid-container">
+            <div class="filters">
+
+            </div>
+
+            <ul class="products-grid">
+                <li class="product-grid__item">
+                  <article class="product">
+                    <div class="product-image">
+                      <img src="img/photo1.jpg"  alt="photo">
+                      </div>
+                    <div class="rating-price">
+                       <div class="rating">
+                          <button class="btn-f">0,53
+                              <img src="/img/Star 2 (Stroke).svg" alt="photo">
+                          </button>
+                       </div>
+                       <div class="price">15999</div>
+                    </div>
+                    <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+                        (NX.HZREU.01S) Charcoal Black</h5>
+                    <p class="card-line">laptops</p>
+                    <button class="btn-card">ADD TO CART</button>
+                  </article>
+                </li>
+                 <li class="product-grid__item">
+                  <article class="product">
+                    <div class="product-image">
+                      <img src="img/photo1.jpg"  alt="photo">
+                      </div>
+                    <div class="rating-price">
+                       <div class="rating">
+                          <button class="btn-f">0,53
+                              <img src="/img/Star 2 (Stroke).svg" alt="photo">
+                          </button>
+                       </div>
+                       <div class="price">15999</div>
+                    </div>
+                    <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+                        (NX.HZREU.01S) Charcoal Black</h5>
+                    <p class="card-line">laptops</p>
+                    <button class="btn-card">ADD TO CART</button>
+                  </article>
+                </li>
+                <li class="product-grid__item">
+                  <article class="product">
+                    <div class="product-image">
+                      <img src="img/photo1.jpg"  alt="photo">
+                      </div>
+                    <div class="rating-price">
+                       <div class="rating">
+                          <button class="btn-f">0,53
+                              <img src="/img/Star 2 (Stroke).svg" alt="photo">
+                          </button>
+                       </div>
+                       <div class="price">15999</div>
+                    </div>
+                    <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+                        (NX.HZREU.01S) Charcoal Black</h5>
+                    <p class="card-line">laptops</p>
+                    <button class="btn-card">ADD TO CART</button>
+                  </article>
+                </li>
+                 <li class="product-grid__item">
+                  <article class="product">
+                    <div class="product-image">
+                      <img src="img/photo2.jpg"  alt="photo">
+                      </div>
+                    <div class="rating-price">
+                       <div class="rating">
+                          <button class="btn-f">0,53
+                              <img src="/img/Star 2 (Stroke).svg" alt="photo">
+                          </button>
+                       </div>
+                       <div class="price">15999</div>
+                    </div>
+                    <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+                        (NX.HZREU.01S) Charcoal Black</h5>
+                    <p class="card-line">laptops</p>
+                    <button class="btn-card">ADD TO CART</button>
+                  </article>
+                </li>
+                <li class="product-grid__item">
+                <article class="product">
+                  <div class="product-image">
+                    <img src="img/photo1.jpg"  alt="photo">
+                    </div>
+                  <div class="rating-price">
+                     <div class="rating">
+                        <button class="btn-f">0,53
+                            <img src="/img/Star 2 (Stroke).svg" alt="photo">
+                        </button>
+                     </div>
+                     <div class="price">15999</div>
+                  </div>
+                  <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+                      (NX.HZREU.01S) Charcoal Black</h5>
+                  <p class="card-line">laptops</p>
+                  <button class="btn-card">ADD TO CART</button>
+                </article>
+                </li>
+
+            </ul>
+         </div>
+
+
+      </div>
+
+
+  </main>
 
 </body>
 </html>
