--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,36 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
 <main>
   <div id="root">
     <!-- Cart component -->
+    <div class="cart">
+      <div class="cart--card">
+        <img class="cart--card-image" src="Rectangle.png" alt="image">
+        <p class="cart--card--description">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+        <p class="cart--card--amount">3</p>
+        <p class="cart--card--cost">47997</p>
+      </div>
+
+      <div class="cart--card">
+        <img class="cart--card-image" src="Rectangle.png" alt="image">
+        <p class="cart--card--description">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</p>
+        <p class="cart--card--amount">1</p>
+        <p class="cart--card--cost">21500</p>
+      </div>
+      
+      <div class="cart--card">
+        <img class="cart--card-image" src="Rectangle.png" alt="image">
+        <p class="cart--card--description">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+        <p class="cart--card--amount">1</p>
+        <p class="cart--card--cost">22999</p>
+      </div>
+      <p class="cart--total-cost">Total: 92496</p>
+      <a class="cart--order" href="#">Order</a>
+    </div>
   </div>
 </main>
 </body>
