--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -2,20 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Card component</title>
+  <title>HTML/CSS Card component</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="image">
+      <img class="image-content"src="./laptop.png" alt="laptop photo">
+    </div>
+    <div class="box rating-price">
+      <div class="box rating">
+        <span class="number-raiting">
+          1.23
+        </span>
+        <span><i class="bi bi-star"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+          <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+        </svg>
+      </span>
+    </div>
+    <span class="price">
+      <p1>15999</p1>
+    </span>
+    </div>
+    <div class="description">
+      <p1 class="description-content">Hoyтбyk Acer Aspire 3 A315-570-336G (NX.HZREU.01S) Charcoal Black
+      </p1>
+    </div>
+    <div class="ident">
+      <p2>laptops</p2>
+    </div>
+    <div class="button">
+      <div class="buy">
+       <p1>ADD TO CART</p1>
+      </div>
+    </div>
   </div>
 </main>
 </body>
