Add new CSS tasks

--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -16,9 +16,11 @@
 <main>
   <div class="wrapper">
     <div class="slider">
+      <span class="from">0 UAH</span>
       <span class="progress"></span>
       <span class="left-slider"></span>
       <span class="right-slider"></span>
+      <span class="to">100000 UAH</span>
     </div>
   </div>
 </main>
