--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- FiltersList component -->
+    <div class="filter-list">
+      <div class="filter-name">Category</div>
+      <div class="filter-checkbox">
+        <input type="checkbox" class="variant" name="Cell-phones">
+        <label for="Cell-phones">Cell phones</label>
+      </div>
+
+      <div class="filter-checkbox">
+        <input type="checkbox" class="variant" name="Computer-Tables">
+        <label for="Computer-Tables">Computer & Tables</label>  
+      </div>
+    </div>
   </div>
 </main>
 </body>
