--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,52 @@
-/* put your styles in this file */
+.wrapper {
+    width: 400px;
+    margin: 100px auto;
+    background-color: aquamarine;
+}
+
+html {
+    font-family: Montserrat;
+}
+
+.filter-list {
+    width: 280px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+}
+
+.filter-name {
+    font-size: 1.25rem;
+    margin-bottom: 22px;
+    font-weight: bold;
+    padding-left: 18px;
+}
+
+.filter-checkbox {
+    margin-bottom: 5px;
+    padding-left: 18px;
+}
+
+.variant {
+    appearance: none;
+    box-sizing: border-box;
+    height: 17px;
+    width: 20px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: white;
+    outline: 1px solid #979797;
+    margin-right: 13px;
+  }
+
+.variant:checked {
+    background-color: #7E72F2;
+    outline: 1px solid #7E72F2;
+    text-align: center;
+  }
+
+.variant:after {
+    content: "✓";
+    color: white;
+}
